--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <meta name="description" content=" الحل الأمثل لإدارة العيادات البيطرية بكفاءة عالية" />
     <link rel="icon" href="./public/vet.png">
     <meta name="author" content="Cyber Brains" />
+    
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+    <!-- End Single Page Apps for GitHub Pages -->
   </head>
 
   <body>
